# libxmp

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  Makefile.dos  Makefile.emx  Makefile.emx.in  Makefile.in  Makefile.lite  Makefile.lnx  Makefile.nt  Makefile.os2  Makefile.os2.in  Makefile.vc  Makefile.vc.in  Makefile.w32  README  TODO.5  autogen.sh  config.guess  config.sub  configure.ac  emx.def  emxlite.def  libxmp-config-version.cmake.autotools.in  libxmp-config.cmake  libxmp-config.cmake.autotools  libxmp.map  libxmp.pc.in  watcom.mif  watcom.mif.in
docs/: CMakeLists.txt  COPYING  CREDITS  Changelog  Makefile  formats.txt  libxmp.rst  manpage.rst  pdfdoc.rst  style.css
docs/formats/: digital-tracker-2.04.txt  digital_symphony.txt  liq-no.txt
lite/: CMakeLists.txt  Changelog  Makefile.dos  Makefile.emx.in  Makefile.in  Makefile.in.in  Makefile.lnx  Makefile.nt  Makefile.os2  Makefile.os2.in  Makefile.vc.in  Makefile.w32  README  configure.ac  libxmp-lite-config-version.cmake.autotools  libxmp-lite-config-version.cmake.autotools.in  libxmp-lite-config.cmake.autotools  libxmp-lite.pc.in  watcom.mif.in
lite/jni/: Android.mk  Application.mk
lite/src/: Makefile  format.c
lite/src/loaders/: mod_load.c
lite/test/: CMakeLists.txt  Makefile  test.c
test/: CMakeLists.txt  Makefile  test.c  test.xm  testlite.c
test-dev/: CMakeLists.txt  Makefile.in  Makefile.vc  Makefile.vc.in  all_tests.txt  compare_med_synth_data.c  compare_mixer_data.c  configure.ac  gen_mixer_data.c  gen_module_data.c  libxmp_fuzz.c  libxmp_fuzz.sh  main.c  md5.c  md5.h  read_event_common.c  read_event_common.h  simple_module.c  test.h  test_api_add_channels.c  test_api_create_context.c  test_api_free_context.c  test_api_get_format_list.c  test_api_inject_event.c  test_api_load_module.c  test_api_load_module_from_callbacks.c  test_api_load_module_from_file.c  test_api_load_module_from_memory.c  test_api_next_position.c  test_api_play_buffer.c  test_api_prev_position.c  test_api_scan_module.c  test_api_seek_time.c  test_api_set_instrument_path.c  test_api_set_position.c  test_api_set_row.c  test_api_set_tempo_factor.c  test_api_smix_channel_pan.c  test_api_smix_load_sample.c  test_api_smix_play_instrument.c  (+619 more)
test-dev/data/: 4096_patterns.dsym  G00_nosuck.data  TEMPO.MTM  TEMPO2.MTM  arc-method3  arc-method4  arc-method9  arc-subdir-6  arc-subdir-spark  arcfs-subdir  beep2.oxm  dbm_smpl_setpan.data  dbm_smpl_setpan.dbm  default_volume.it  default_volume_it.data  downmix.data  duplicate_check_transpose.data  duplicate_check_transpose.it  extsample.data  extsample.mmd2  far_effect1.data  far_effect3.data  far_weird_events.data  far_weird_events.far  finefx_ft2.data  finefx_ft2.xm  finefx_imf.data  finefx_imf.imf  finetune.med  flt_am_envelope.data  flt_am_envelope.mod  flt_am_envelope.mod.nt  flt_am_ignore_volfx.data  flt_am_ignore_volfx.mod  flt_am_ignore_volfx.mod.nt  flt_am_new_note.data  flt_am_new_note.mod  flt_am_new_note.mod.nt  flt_am_override.data  flt_am_override.mod  (+522 more)
test-dev/data/f/: depack_arc_invalid_width_FF  depack_arc_pak10  depack_arcfs_invalid_size  depack_arcfs_invalid_size_compr  depack_arcfs_invalid_width_8  depack_bz2_invalid_crc.bz2  depack_bz2_invalid_tree.bz2  depack_bz2_truncated.bz2  depack_bz2_truncated2.bz2  depack_ice_cov_bitplane_length_eof_211  depack_ice_cov_bitplane_length_eof_231  depack_ice_cov_bitplane_over_211  depack_ice_cov_bitplane_over_231  depack_ice_cov_compressed_mismatch_231  depack_ice_cov_depack_bound_113  depack_ice_cov_depack_bound_231  depack_ice_cov_depack_limit_113  depack_ice_cov_depack_limit_231  depack_ice_cov_extra_bits_113  depack_ice_cov_extra_bits_231  depack_ice_cov_filesize_113  depack_ice_cov_literal_copy_eof_113  depack_ice_cov_literal_copy_eof_231  depack_ice_cov_literal_copy_over_113  depack_ice_cov_literal_copy_over_231  depack_ice_cov_literal_length_eof_113  depack_ice_cov_literal_length_eof_231  depack_ice_cov_window_copy_oob_113  depack_ice_cov_window_copy_oob_231  depack_ice_cov_window_copy_over_113  depack_ice_cov_window_copy_over_231  depack_ice_cov_window_distance_eof_113  depack_ice_cov_window_distance_eof_231  depack_ice_cov_window_length_eof_113  depack_ice_cov_window_length_eof_231  depack_ice_cov_zero_initial_bits_113  depack_ice_cov_zero_initial_bits_220  depack_ice_cov_zero_initial_copy_113  depack_ice_cov_zero_initial_copy_231  depack_lha_invalid_size.lha  (+96 more)
test-dev/data/m/: AOM-Mind.Tracker  Beat_it_up.amf  Beethoven.CoconizerSong  FROZEN.DMF  GAMEMUSIC.mod  Indian_Summer.amf  P40A.40KIntro  P40B.cipher  P41A.cloud busters  Revelution.amf  dragonf.mod  fin-nv1.mod  liquid pain.liq  med3song.med  med4hyb.msh  med4song.med  med4syn.msh  mmdc.TTUNE  pennylane.mod  redoctober-sub-docking.ims  rhino sting.xm  super_ski_2_special.mod
test-dev/data/p/: dammed_illusion.mod  flowerpower.mod  listen.mod  space traveller 2.mod
test-dev/openmpt/it/: 00_README  01_TODO  Autovibrato-Reset.data  BidiPrecision.it  CarryNNA.data  DNA-NoInstr.it  DoubleSlide.it  DoubleSlideCompatGxx.it  Fade-Porta.data  FilterPortaSmpChange-InsMode.it  FilterPortaSmpChange.it  FilterResetPatDelay.it  FineVolColSlide.data  GlobalVolFirstTick.it  InitialNoteMemory.it  InitialNoteMemoryInstrMode.it  InstrAfterMultisamplePorta.it  JxxTicks.it  LinearSlides.data  LoopBreak.it  LoopStartAfterPatternEnd.it  MacroExtendedParam.data  MacroExtendedParam.it  MultiZxx.data  MultiZxx.it  NoMap.data  NoMapEffects.it  NoSlide.it  NoteFade-InsMode.it  NoteFade-SmpMode.it  Off-Porta-CompatGxx.data  Off-Porta-CompatGxx.it  Off-Porta.data  Off-Porta.it  OffsetWithInstr.it  PanResetInstr.it  PanbrelloHold.it  PitchPanReset.it  PortaCutCompat.it  PortaInsNum.data  (+43 more)
test-dev/openmpt/mod/: 00_README  01_TODO  InstrDelay.mod  InstrSwapRetrigger.data  InstrSwapRetrigger.mod  NoteDelay-NextRow.mod  PTInstrSwap.data  PTInstrVolume.data  PTInstrVolume.mod  PTRetrigger.mod  PTStoppedSwap.data  PTStoppedSwap.mod  PTSwapEmpty.data  PTSwapNoLoop.data  PTSwapNoLoop.mod  PatternDelaysRetrig.mod  PortaSmpChange.data  PortaSmpChange_PT.data  PortaSwapPT.data  (+4 more)
(+432 files in other folders)
